--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,16 @@
-.bot-army {
-  overflow-x: scroll;
-  min-height: 300px;
-  max-width: 100%;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.ui.grid > .row.bot-army-row {
-  flex-wrap: nowrap;
-  min-height: 100%;
+.bot-card {
+  display: flex;
+  background-color: azure;
 }
 
-.ui.grid {
-  padding: 0px 20px;
+.button {
+  padding: 0; 
+  border: none; 
+  color: red;
 }
